--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,5 +16,11 @@
         android:layout_height="wrap_content"
         android:text="test"
         android:textColor="@android:color/white"/>
+    <Button
+        android:id="@+id/btnPermission"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Permission"
+        android:textColor="@android:color/white"/>
     
 </LinearLayout>
