--- a/app/src/main/res/layout/fragment_main_noti.xml
+++ b/app/src/main/res/layout/fragment_main_noti.xml
@@ -5,7 +5,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvMain"
-        android:background="@color/colorAccent"
+        android:background="@color/black"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
